# MANA

./: .gitignore  Cargo.toml  launcher.sh  prompt.md  stream-parser.sh
.mana/: config.toml  mana  metadata.sqlite-journal  sync.toml  vectors.usearch
scripts/: bench.sh  mana-daemon.sh
src/: bench.rs  main.rs  update.rs
src/daemon/: mod.rs
src/embeddings/: index.rs  mod.rs  model.rs  store.rs
src/hooks/: context_injection.rs  mod.rs  session_end_handler.rs
src/learning/: consolidation.rs  foreground.rs  mod.rs  trajectory.rs
src/reflection/: analyzer.rs  distillation.rs  mod.rs  verdict.rs
src/storage/: causal.rs  mod.rs  patterns.rs  similarity.rs  skills.rs
src/sync/: crypto.rs  export.rs  git_backend.rs  mod.rs  p2p_backend.rs  s3_backend.rs  sanitize.rs  supabase_backend.rs
tests/: sync_integration.rs
