[package]
name = "mana"
version = "0.2.0"
edition = "2021"
authors = ["MANA Autonomous Agent"]
description = "Memory-Augmented Neural Assistant - High-performance learning system for Claude Code"
license = "MIT"
repository = "https://github.com/jedarden/MANA"
keywords = ["ai", "learning", "claude", "context-injection"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mana"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# File system utilities
dirs = "5"

# Sync module dependencies
regex = "1"
toml = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"

# S3 sync backend (optional, compile with --features s3)
aws-config = { version = "1.5", optional = true }
aws-sdk-s3 = { version = "1.56", optional = true }

# Supabase/PostgreSQL backend (optional, compile with --features supabase)
reqwest = { version = "0.12", features = ["json"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[features]
default = []
s3 = ["aws-config", "aws-sdk-s3"]
supabase = ["reqwest", "uuid"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
